# split-annotations

./: .gitignore  EXPERIMENTS.md  README.md
c/: Cargo.toml
c/annotate/: Cargo.toml
c/annotate/src/: main.rs  writer.rs
c/benchmarks/: breakdown.py  get-data.sh  run-all.sh
c/benchmarks/blackscholes/: Makefile  benchmark-breakdown.sh  benchmark-pieces.sh  blackscholes.c
c/benchmarks/gotham/: Makefile  benchmark.sh  gotham.c  gotham.h  gotham_composer.c  gotham_composer.h
c/benchmarks/haversine/: Makefile  benchmark.sh  haversine.c
c/benchmarks/nashville/: Makefile  benchmark-breakdown.sh  benchmark-pieces.sh  benchmark.sh  nashville.c  nashville.h  nashville_composer.c  nashville_composer.h  nashville_parallel.c  nashville_parallel.h
c/benchmarks/nbody/: Makefile  benchmark.sh  nbody.c  nbody.h  nbody_composer.c  nbody_composer.h  nbody_mkl.c  nbody_mkl.h
c/benchmarks/shallow_water/: Makefile  README.md  benchmark.sh  shallow_water.c  shallow_water.h  shallow_water_composer.c  shallow_water_composer.h  shallow_water_mkl.c  shallow_water_mkl.h
c/composer/: Cargo.toml  build.rs
c/composer/src/: error.rs  lib.rs  util.rs
c/composer/src/runtime/: memory.rs  mod.rs  tasks.rs
c/lib/ImageMagick/: Makefile  imagemagick.annotation  splitters.c  splitters.h
c/lib/composer_mkl/: Makefile  README.md  mkl.annotation  mkl_extensions.c  mkl_extensions.h  splitters.c  vec.c  vec.h
python/benchmarks/: get-data.sh  requirements.txt  run-all.sh  setup-env.sh
python/pycomposer/: .gitignore  README.md  requirements.txt  setup.py
python/pycomposer/doc/: Makefile
(+85 files in other folders)
