[package]
name = "composer"
version = "0.1.0"
authors = ["Shoumik Palkar <shoumik@cs.stanford.edu>"]
edition = "2018"

[dependencies]
libc = "0.2"
byteorder = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.2.0"
fnv = "1.0.6"
env_logger = "0.6.0"
log = "0.4.6"
crossbeam-utils = "0.6"

[build-dependencies]
cbindgen = "0.8.0"

[lib]
crate-type = ["cdylib", "rlib"]
